<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aipr_2206_support</name>
  <version>1.0.0</version>
  <description>Support for AIPR 06/2022</description>
  <maintainer email="marco.costanzo@unicampania.it">Marco Costanzo</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <exec_depend>uclv_aipr_panda_sim</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
